k8s/apigateway/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: mahmoudaboueleneen/amazon-replica:apigateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
