k8s/apigateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-deployment
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      name: apigateway
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: mahmoudaboueleneen/amazon-replica:apigateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
